fixing some last cross brwser bugs

--- a/app/404.md
+++ b/app/404.md
@@ -2,9 +2,6 @@
 layout: page
 permalink: /404.html
 ---
-	<body class="body home">
-		<script type="text/javascript">
-			window.location.replace("/");
-		</script>
-	</body>
-</html>
+  <div>
+		<script type="text/javascript">window.location.replace("/");</script>
+  </div>
